# src/api/models/CPUStatInfo.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenHPC
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface CPUStatInfo
+ */
+export interface CPUStatInfo {
+    /**
+     * 
+     * @type {number}
+     * @memberof CPUStatInfo
+     */
+    avgLoad: number;
+}
+
+/**
+ * Check if a given object implements the CPUStatInfo interface.
+ */
+export function instanceOfCPUStatInfo(value: object): value is CPUStatInfo {
+    if (!('avgLoad' in value) || value['avgLoad'] === undefined) return false;
+    return true;
+}
+
+export function CPUStatInfoFromJSON(json: any): CPUStatInfo {
+    return CPUStatInfoFromJSONTyped(json, false);
+}
+
+export function CPUStatInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): CPUStatInfo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'avgLoad': json['avg_load'],
+    };
+}
+
+export function CPUStatInfoToJSON(json: any): CPUStatInfo {
+    return CPUStatInfoToJSONTyped(json, false);
+}
+
+export function CPUStatInfoToJSONTyped(value?: CPUStatInfo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'avg_load': value['avgLoad'],
+    };
+}
+
