# src/api/models/GPUStatInfo.ts
@@ -1,0 +1,101 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenHPC
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { MemStatInfo } from './MemStatInfo';
+import {
+    MemStatInfoFromJSON,
+    MemStatInfoFromJSONTyped,
+    MemStatInfoToJSON,
+    MemStatInfoToJSONTyped,
+} from './MemStatInfo';
+
+/**
+ * 
+ * @export
+ * @interface GPUStatInfo
+ */
+export interface GPUStatInfo {
+    /**
+     * 
+     * @type {string}
+     * @memberof GPUStatInfo
+     */
+    name: string;
+    /**
+     * 
+     * @type {MemStatInfo}
+     * @memberof GPUStatInfo
+     */
+    mem: MemStatInfo;
+    /**
+     * 
+     * @type {number}
+     * @memberof GPUStatInfo
+     */
+    memUtil: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof GPUStatInfo
+     */
+    util: number;
+}
+
+/**
+ * Check if a given object implements the GPUStatInfo interface.
+ */
+export function instanceOfGPUStatInfo(value: object): value is GPUStatInfo {
+    if (!('name' in value) || value['name'] === undefined) return false;
+    if (!('mem' in value) || value['mem'] === undefined) return false;
+    if (!('memUtil' in value) || value['memUtil'] === undefined) return false;
+    if (!('util' in value) || value['util'] === undefined) return false;
+    return true;
+}
+
+export function GPUStatInfoFromJSON(json: any): GPUStatInfo {
+    return GPUStatInfoFromJSONTyped(json, false);
+}
+
+export function GPUStatInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): GPUStatInfo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+        'mem': MemStatInfoFromJSON(json['mem']),
+        'memUtil': json['mem_util'],
+        'util': json['util'],
+    };
+}
+
+export function GPUStatInfoToJSON(json: any): GPUStatInfo {
+    return GPUStatInfoToJSONTyped(json, false);
+}
+
+export function GPUStatInfoToJSONTyped(value?: GPUStatInfo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+        'mem': MemStatInfoToJSON(value['mem']),
+        'mem_util': value['memUtil'],
+        'util': value['util'],
+    };
+}
+
