# src/api/models/MemStatInfo.ts
@@ -1,0 +1,84 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenHPC
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface MemStatInfo
+ */
+export interface MemStatInfo {
+    /**
+     * 
+     * @type {number}
+     * @memberof MemStatInfo
+     */
+    used: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof MemStatInfo
+     */
+    total: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof MemStatInfo
+     */
+    unit: string;
+}
+
+/**
+ * Check if a given object implements the MemStatInfo interface.
+ */
+export function instanceOfMemStatInfo(value: object): value is MemStatInfo {
+    if (!('used' in value) || value['used'] === undefined) return false;
+    if (!('total' in value) || value['total'] === undefined) return false;
+    if (!('unit' in value) || value['unit'] === undefined) return false;
+    return true;
+}
+
+export function MemStatInfoFromJSON(json: any): MemStatInfo {
+    return MemStatInfoFromJSONTyped(json, false);
+}
+
+export function MemStatInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): MemStatInfo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'used': json['used'],
+        'total': json['total'],
+        'unit': json['unit'],
+    };
+}
+
+export function MemStatInfoToJSON(json: any): MemStatInfo {
+    return MemStatInfoToJSONTyped(json, false);
+}
+
+export function MemStatInfoToJSONTyped(value?: MemStatInfo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'used': value['used'],
+        'total': value['total'],
+        'unit': value['unit'],
+    };
+}
+
